vbnc/vbnc/tests/Errors/30070-2.vb
Module ForEach
    Public Function test()
        For Each item As Integer In New Integer() {0, 1, 2}

        Next 2
        Return 0
    End Function
End Module
